--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -26,6 +26,10 @@
       "plugin": "users-permissions",
       "model": "user",
       "via": "posts"
+    },
+    "slug": {
+      "type": "uid",
+      "targetField": "title"
     }
   }
 }
