--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -30,6 +30,18 @@
     "slug": {
       "type": "uid",
       "targetField": "title"
+    },
+    "image": {
+      "collection": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
